added animation to blog page

--- a/src/components/Articlecard.astro
+++ b/src/components/Articlecard.astro
@@ -3,9 +3,7 @@ const { article } = Astro.props;
 // console.log(article);
 ---
 
-<div
-  class="card w-[18rem] rounded-md bg-black border-2 cursor-pointer border-yellow-300"
->
+<div class="card w-[18rem] rounded-md bg-black cursor-pointer">
   <div
     class="cardimg h-[12rem] w-full"
     style={{ background: `url(${article.img})` }}
