--- a/src/components/Blogbanner.astro
+++ b/src/components/Blogbanner.astro
@@ -1,5 +1,5 @@
 <section
-  class="blgbannercon w-full text-white pr-[6rem] pl-[5%] flex h-[80vh] min-h-max"
+  class="blgbannercon blogcon z-10 w-full text-white pr-[6rem] pl-[5%] flex h-[80vh] min-h-max"
 >
   <div class="">
     <h1
@@ -12,13 +12,13 @@
       height="8"
       viewBox="0 0 123 8"
       fill="none"
-      class="mt-2"
+      class="mt-2 blogline"
       xmlns="http://www.w3.org/2000/svg"
     >
       <line y1="4" x2="123" y2="4" stroke="white" stroke-width="8"></line>
     </svg>
 
-    <p class="w-[70%] mt-8 text-[17px]">
+    <p class="w-[70%] bannertxt mt-8 text-[17px]">
       Lorem ipsum dolor sit amet consectetur adipiscing elit mauris urna, netus
       pretium ac suspendisse porta laoreet parturient proin dignissim, viverra
       sagittis torquent primis conubia duis aliquet erat. Nisl scelerisque
@@ -31,11 +31,5 @@
       malesuada fusce semper pulvinar volutpat taciti maecenas tortor habitasse
     </p>
   </div>
-  <img class="h-full" src="/assets/blogbanner.png" alt="" />
+  <img class="h-full bannerimg" src="/assets/blogbanner.png" alt="" />
 </section>
-
-<style>
-  .blgbannercon {
-    border: 2px solid salmon;
-  }
-</style>
