--- a/src/components/Blognav.astro
+++ b/src/components/Blognav.astro
@@ -1,12 +1,12 @@
 <nav
-  class="sm:hidden navblgcon md:flex flex-col text-white pr-[3%] w-[6rem] items-center justify-between fixed top-0 right-0"
+  class="sm:hidden navblgcon md:flex flex-col text-white pr-[3%] w-[6rem] z-[1000] items-center justify-between fixed top-0 right-0"
 >
   <svg
     width="26"
     height="38"
     viewBox="0 0 26 38"
     fill="none"
-    class="!h-[25px] mt-4 mb-8"
+    class="!h-[25px] hambugermenu mt-4 mb-8"
     xmlns="http://www.w3.org/2000/svg"
   >
     <path
@@ -48,9 +48,5 @@
   svg {
     width: 25px !important;
     cursor: pointer;
-  }
-
-  .navblgcon {
-    border: 2px solid white;
   }
 </style>
