--- a/src/components/Navlg.astro
+++ b/src/components/Navlg.astro
@@ -6,7 +6,7 @@
 ---
 
 <nav
-  class="sm:hidden navlgcon md:flex text-white px-[3%] bg-black items-center w-full justify-between fixed bottom-0"
+  class="sm:hidden navlgcon md:flex text-white h-[4rem] px-[3%] bg-black items-center w-full justify-between fixed bottom-0"
 >
   <div class="">
     <h3 class="text-xl">Contact</h3>
