--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,11 +1,12 @@
 ---
 import Articles from "../components/Articles.astro";
 import Blogbanner from "../components/Blogbanner.astro";
+import Blogcontact from "../components/Blogcontact.astro";
 import BlogLayout from "../layouts/BlogLayout.astro";
 ---
 
 <BlogLayout title="Blog">
   <Blogbanner />
+  <Blogcontact />
   <Articles />
-  <h1>hello world</h1>
 </BlogLayout>
