--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -30,6 +30,7 @@ const { title } = Astro.props;
         padding: 0;
         margin: 0;
         top: 0;
+        overflow-x: hidden;
         font-family: "Fira Sans", sans-serif;
         /* overflow-y: hidden; */
       }
