--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,7 +19,9 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
-    <img src="/assets/bkgimg.png" />
+    <div class="background">
+      <img src="/assets/bkgimg.png" />
+    </div>
     <Topnav />
     <slot />
     <Navlg />
@@ -35,13 +37,26 @@ const { title } = Astro.props;
         font-family: "Fira Sans", sans-serif;
         /* overflow-y: hidden; */
       }
+
       img {
         width: 100%;
+        z-index: -1;
         position: fixed;
         top: 0;
         left: 0;
-        z-index: -1;
       }
+
+      .background::after {
+        content: "";
+        width: 100%;
+        height: 100%;
+        position: fixed;
+        top: 0;
+        right: 0;
+        z-index: -1;
+        background-color: rgba(0, 0, 0, 0.604);
+      }
+
       /* scrollbar style */
 
       /* width */
